--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bangladesh 2.0</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style_bd.css">
 </head>
-<body>
-    
+<body class="body-margin">
+    <header>
+        <nav>
+            <div class="nav-title fira-sans-bold">
+                <h1>Bangladesh 2.0</h1>
+            </div>
+            <div>
+                <button class="btn-nav fira-sans-semibold">Sign In</button>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section class="banner">
+            <div class="txt">
+                <p class="subtitle fira-sans-medium">Bangladesh 2.0</p>
+                <h1 class="title fira-sans-bold">Idea, innovation, vision and challenges in New Bangladesh.</h1>
+                <div>
+                    <button class="btn fira-sans-semibold ">Explore New Bangladesh</button>
+                </div>
+            </div>
+            <div class="shahid-minar">
+                <img src="assets/hero.png" alt="sahid minar pic">
+            </div>
+            
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
