Pillar of bangladesh done

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </nav>
     </header>
     <main>
+        <!-- banner section  -->
         <section class="banner">
             <div class="txt">
                 <p class="subtitle fira-sans-medium">Bangladesh 2.0</p>
@@ -34,6 +35,50 @@
             </div>
             
         </section>
+
+        <!-- Card section  -->
+        <section>
+            <h1 class="title-sec2 fira-sans-bold">Pillars of "Bangladesh 2.0"</h1>
+            <div class="container">
+                <div class="card">
+                    <div class="crd-img">
+                        <img src="assets/card-icon.png" alt="">
+                    </div>
+                    <div class="crd-txt">
+                        <h5 class="topic fira-sans-bold">Innovation</h5>
+                        <p class="norm fira-sans-regular">Bangladesh 2.0 aims for innovation, digital services, startups, and inclusive tech-driven growth.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="crd-img">
+                        <img src="assets/card-icon.png" alt="">
+                    </div>
+                    <div class="crd-txt">
+                        <h5 class="topic fira-sans-bold">Sustainability</h5>
+                        <p class="norm fira-sans-regular">In Bangladesh 2.0, sustainability means using technology for green growth, equality, and resilience.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="crd-img">
+                        <img src="assets/card-icon.png" alt="">
+                    </div>
+                    <div class="crd-txt">
+                        <h5 class="topic fira-sans-bold">Infrastructure</h5>
+                        <p class="norm fira-sans-regular">In new Bangladesh, infrastructure focuses on smart cities, digital connectivity, and green development.</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="crd-img">
+                        <img src="assets/card-icon.png" alt="">
+                    </div>
+                    <div class="crd-txt">
+                        <h5 class="topic fira-sans-bold">Empowerment</h5>
+                        <p class="norm fira-sans-regular">In Bangladesh 2.0, empowerment means enabling youth and citizens through innovation and technology.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- vision future section -->
     </main>
     <footer>
 
