--- a/index.html
+++ b/index.html
@@ -79,6 +79,43 @@
             </div>
         </section>
         <!-- vision future section -->
+        <section>
+            <div class="whole-container">
+                <div class="txt-future">
+                    <h1 class="title-future fira-sans-bold">The Vision of Future</h1>
+                    <p class="sub norm fira-sans-regular">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+                </div>
+                <div class="future-card-container">
+                    <div class="future-card1">
+                        <img class="fu-img" src="assets/card-icon.png" alt="">
+                        <h5 class="dr-topic fira-sans-bold">Digital Transformation</h5>
+                        <p class="norm fira-sans-regular">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                        <button class="btn-card1 fira-sans-semibold">Learn More</button>
+                    </div>
+                    <div class="future-card2">
+                        <img class="fu-img" src="assets/card-icon.png" alt="">
+                        <h5 class="dr-topic fira-sans-bold">Green Energy</h5>
+                        <p class="norm fira-sans-regular">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                        <button class="btn-card2 fira-sans-semibold">Learn More</button>
+                    </div>
+                    <div class="future-card3">
+                        <img class="fu-img" src="assets/card-icon.png" alt="">
+                        <h5 class="dr-topic fira-sans-bold">Modern Infrastructure</h5>
+                        <p class="norm fira-sans-regular">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                        
+                        <button class="btn-card3 fira-sans-semibold">Learn More</button>
+                        
+                    </div>
+                </div>
+                <div class="statement">
+                    <div class="dr-txt">
+                        <p class="dr-para fira-sans-regular">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ad, repellendus tempore soluta dolorem accusantium ipsam totam quo facilis magnam quasi placeat consectetur ex? Expedita fuga explicabo porro reiciendis numquam?</p>
+                        <h5 class="dr-title fira-sans-semibold">Dr. Muhammad Yunus</h5>
+                        <p class="dr-para2">Chief Adviser of the People's Republic of Bangladesh</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
