Future vision section done

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <p class="norm fira-sans-regular">In new Bangladesh, infrastructure focuses on smart cities, digital connectivity, and green development.</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card4">
                     <div class="crd-img">
                         <img src="assets/card-icon.png" alt="">
                     </div>
@@ -109,9 +109,9 @@
                 </div>
                 <div class="statement">
                     <div class="dr-txt">
-                        <p class="dr-para fira-sans-regular">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ad, repellendus tempore soluta dolorem accusantium ipsam totam quo facilis magnam quasi placeat consectetur ex? Expedita fuga explicabo porro reiciendis numquam?</p>
+                        <p class="dr-para fira-sans-regular">"Poverty is not created by the poor. It is created by the system we have built, the institutions we designed, and the mindset we follow. The financial system was never meant for the poor—it was built to serve the rich. But I have always believed that credit is a fundamental human right. That’s why I started Grameen Bank, to give the poor—especially women—a chance to stand on their own feet. I have seen how a small loan can change a life. The poor are not helpless. They are full of potential and energy, but the system keeps them trapped. We must redesign our economy so that it works for everyone, not just a few. One day, I believe, we will put poverty in the museum. That is the world I dream of, and I invite all young people to help build it—not just by chasing profit, but by creating businesses with a purpose.”</p>
                         <h5 class="dr-title fira-sans-semibold">Dr. Muhammad Yunus</h5>
-                        <p class="dr-para2">Chief Adviser of the People's Republic of Bangladesh</p>
+                        <p class="dr-para2 fira-sans-regular">Chief Adviser of the People's Republic of Bangladesh</p>
                     </div>
                 </div>
             </div>
