Donation page done

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </section>
 
         <!-- Card section  -->
-        <section>
+        <section >
             <h1 class="title-sec2 fira-sans-bold">Pillars of "Bangladesh 2.0"</h1>
             <div class="container">
                 <div class="card">
@@ -171,7 +171,7 @@
             </div>
          </section>
          <!-- News section -->
-         <section>
+        <section>
             <div class="news-container">
                 <h1 class="news-title fira-sans-bold">Recent News</h1>
                 <p class="news-para fira-sans-regular">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
@@ -220,6 +220,34 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        
+        <!-- Donation page -->
+         <section>
+            <div class="donation-container">
+                <div class="txt-donation">
+                    <h1 class="donation-font fira-sans-bold">Donate Today</h1>
+                    <p class="news1-sub fira-sans-regular">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+                </div>
+                    <div class="donation-cards">
+                        <div class="donate-card">
+                            <h1 class="donation-font fira-sans-bold">100 Taka</h1>
+                        </div>
+                        <div class="back donate-card">
+                            <h1 class="donation-font fira-sans-bold">200 Taka</h1>
+                        </div>
+                        <div class="donate-card">
+                            <h1 class="donation-font fira-sans-bold">500 Taka</h1>
+                        </div>
+                        <div class="donate-card">
+                            <h1 class="donation-font fira-sans-bold">1000 Taka</h1>
+                        </div>
+                    </div>
+                    <input class="donatation-form placeholder-font fira-sans-regular" placeholder="Other Amount (Taka)" type="text" name="" id="">
+                    <div class="sub-dona">
+                        <input class="submit1" type="submit" value="Donate Now">
+                    </div>
             </div>
          </section>
     </main>
