--- a/index.html
+++ b/index.html
@@ -250,6 +250,23 @@
                     </div>
             </div>
          </section>
+
+        <!-- News Letter section -->
+         <section>
+            <div class="letter-container">
+                <div class="text-letter">
+                    <h1 class="letter fira-sans-bold">Subscribe Newsletter</h1>
+                    <p class="letter-sub fira-sans-regular">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+                </div>
+                <div class="inputs">
+                    <input class="email fira-sans-regular" type="email" name="" id="" placeholder="Enter your email here">
+                    <input class="subscribe fira-sans-semibold" type="submit" value="Subscribe">
+                </div>
+                <div>
+                    <p class="letter-sub fira-sans-regular">We promise not to spam you!</p>
+                </div>
+            </div>
+         </section>
     </main>
     <footer>
 
