--- a/index.html
+++ b/index.html
@@ -268,8 +268,19 @@
             </div>
          </section>
     </main>
-    <footer>
-
+    <footer class="foot">
+        <div>
+            <h1 class="last-h fira-sans-bold">Bangladesh 2.0</h1>
+            <hr class="hr">
+        </div>
+        
+        <div>
+            <ul class="icons">
+                <li class="list"><a class="icn-link" href=""><img src="assets/facebook.png" alt=""></a></li>
+                <li class="list"><a class="icn-link" href=""><img src="assets/instagram.png" alt=""></a></li>
+                <li class="list"><a class="icn-link" href=""><img src="assets/x.png" alt=""></a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
