--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </div>
          </section>
          <!-- News section -->
-        <section>
+        <section class="sec1">
             <div class="news-container">
                 <h1 class="news-title fira-sans-bold">Recent News</h1>
                 <p class="news-para fira-sans-regular">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
