This is the submit

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     </div>
                     <input class="donatation-form placeholder-font fira-sans-regular" placeholder="Other Amount (Taka)" type="text" name="" id="">
                     <div class="sub-dona">
-                        <input class="submit1" type="submit" value="Donate Now">
+                        <input class="submit1" type="submit" value="Done Now">
                     </div>
             </div>
          </section>
